--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample code for using Soda-Test on backend, using mocha",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=development mocha \"dist/test-samples/**/*.test.js\"",
     "tsc": "tsc"
   },
   "repository": {
@@ -24,6 +24,17 @@
   },
   "homepage": "https://github.com/ranhs/soda-test-mocha-samples#readme",
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "express-serve-static-core": "^0.1.1",
+    "soda-test": "^1.0.4",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "argv": "0.0.2",
+    "express": "^4.17.1",
+    "generate-function": "^2.3.1",
+    "mongoose": "^5.12.1",
+    "parse-function": "^5.6.10",
+    "underscore": "^1.12.1"
   }
 }
