--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "soda-test-mocha-samples",
-  "version": "1.0.10",
+  "version": "1.1.1",
   "description": "Sample code for using Soda-Test on backend, using mocha",
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=development mocha \"dist/test-samples/**/*.test.js\"",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "soda-plan": "node node_modules/soda-test/plan \"dist/test-samples/**/*.test.js\" testPlan.json"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "express-serve-static-core": "^0.1.1",
-    "soda-test": "^1.0.10",
+    "soda-test": "^1.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
