--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "soda-test-mocha-samples",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Sample code for using Soda-Test on backend, using mocha",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=development mocha \"dist/test-samples/**/*.test.js\"",
+    "test": "cross-env NODE_ENV=development mocha --timeout 30000 \"dist/test-samples/**/*.test.js\"",
     "tsc": "tsc",
     "soda-plan": "node node_modules/soda-test/plan \"dist/test-samples/**/*.test.js\" testPlan.json"
   },
@@ -27,7 +27,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "express-serve-static-core": "^0.1.1",
-    "soda-test": "^1.1.1",
+    "soda-test": "^1.1.2",
     "typescript": "^4.2.3"
   },
   "dependencies": {
