update due to latest changes (1.4.0)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=development mocha --timeout 30000 \"dist/test-samples/**/*.test.js\"",
+    "test-1": "mocha \"dist/test-samples/configuration.test.js\"",
     "tsc": "tsc",
     "soda-plan": "node node_modules/soda-test/plan \"dist/test-samples/**/*.test.js\" testPlan.json"
   },
@@ -27,7 +28,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "express-serve-static-core": "^0.1.1",
-    "soda-test": "^1.4.0",
+    "soda-test": "file:../soda-test/soda-test-1.4.0.tgz",
     "typescript": "^4.2.3"
   },
   "dependencies": {
