--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "soda-test-mocha-samples",
-  "version": "1.5.0",
+  "version": "1.5.2",
   "description": "Sample code for using Soda-Test on backend, using mocha",
   "main": "index.js",
   "scripts": {
@@ -26,14 +26,14 @@
   },
   "homepage": "https://github.com/ranhs/soda-test-mocha-samples#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "cross-env": "^7.0.3",
-    "express-serve-static-core": "^0.1.1",
-    "soda-test": "^1.5.0",
+    "soda-test": "file:../soda-test/soda-test-1.5.2.tgz",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "argv": "0.0.2",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "generate-function": "^2.3.1",
     "mongoose": "^5.12.1",
     "parse-function": "^5.6.10",
