--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "cross-env": "^7.0.3",
-    "soda-test": "file:../soda-test/soda-test-1.5.2.tgz",
+    "soda-test": "^1.5.2",
     "typescript": "^4.2.3"
   },
   "dependencies": {
