--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "soda-test-mocha-samples",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Sample code for using Soda-Test on backend, using mocha",
   "main": "index.js",
   "scripts": {
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "cross-env": "^7.0.3",
-    "soda-test": "^2.0.0",
+    "soda-test": "file:../soda-test/soda-test-2.1.0.tgz",
     "typescript": "^4.8.4"
   },
   "dependencies": {
