--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "cross-env": "^7.0.3",
-    "soda-test": "file:../soda-test/soda-test-2.1.0.tgz",
+    "soda-test": "^2.1.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
